AI 서버 연결
